tests/unit-warning-compilation/link-referenced-not-from-main.c
extern int f();

int g() { return f(); }

int main(void) { return 0; }
